# ROS2-Nav2-Random-Explorer-Bot

./: CMakeLists.txt  README.md  package.xml
config/: exploration_params.yaml  nav2_params.yaml  rviz_config.rviz
include/random_explorer_bot/: exploration_controller.hpp  map_validator.hpp  random_goal_generator.hpp
launch/: explorer_gazebo.launch.py  explorer_nav.launch.py
src/: exploration_controller.cpp  main.cpp
